# mac-rom-simm-programmer

./: .cproject  .gitignore  .project  BuildingOnLinux.md  CMakeLists.txt  CreatingUdevRules.md  Descriptors.c  Descriptors.h  PackagingOnMacOSX.md  ProjectHome.md  README.md  SIMMProgrammer-AVRStudio.atsln  SIMMProgrammer-AVRStudio.cproj  cdc_device_definition.c  cdc_device_definition.h  chip_id.h  delay.c  delay.h  external_mem.c  external_mem.h  led.h  main.c  mcp23s17.c  mcp23s17.h  ports.c  ports.h  programmer_protocol.h  simm_programmer.c  simm_programmer.h  toolchain-avr.cmake  toolchain-m258ke.cmake  util.h
LUFA/Drivers/USB/: USB.h
downloads/: README.md
downloads/Mac ROM SIMM Programmer PCB 1.0/: README.md
downloads/SIMM Revision 3/: README.md
downloads/SIMMProgrammer1.0.3-mac/: README.md
downloads/SIMMProgrammer1.0.3-mac(ub)/: README.md
downloads/SIMMProgrammer1.0.3-win/: README.md
downloads/SIMMProgrammerBootloader1.0.1/: README.md  SIMMProgrammerBootloader1.0.1.hex
downloads/SIMMProgrammerFirmware1.2/: README.md
downloads/SIMMProgrammerFirmware1.3/: README.md
drivers/: mcp23s17.c  mcp23s17.h  parallel_flash.c  parallel_flash.h
hal/: board.h  gpio.h  parallel_bus.h  spi.h  usbcdc.h
hal/at90usb646/: Descriptors.c  Descriptors.h  LUFAConfig.h  at90usb646_options.cmake  at90usb646_sources.cmake  board.c  board_hw.h  cdc_device_definition.c  cdc_device_definition.h  gpio.c  gpio_hw.h  hardware.h  parallel_bus.c  spi.c  spi_private.h  usbcdc.c  usbcdc_hw.h
hal/at90usb646/LUFA/Drivers/USB/: USB.h
hal/at90usb646/LUFA/Drivers/USB/Class/Device/: CDCClassDevice.c
hal/m258ke/: board.c  board_hw.h  descriptors.c  gpio.c  gpio_hw.h  hardware.h  m258ke_options.cmake  m258ke_sources.cmake  parallel_bus.c  spi.c  spi_private.h  usbcdc.c  usbcdc_hw.h
hal/m258ke/nuvoton/: LDROM.ld  M251.h  NuMicro.h  README.md  acmp_reg.h  bpwm_reg.h  clk_reg.h  crc_reg.h  crypto_reg.h  dac_reg.h  eadc_reg.h  ebi_reg.h  fmc_reg.h  gcc_arm.ld  gpio_reg.h  i2c_reg.h  lcd_reg.h  opa_reg.h  pdma_reg.h  psio_reg.h  pwm_reg.h  qspi_reg.h  rtc_reg.h  sc_reg.h  spi_reg.h  startup_M251.S  sys_reg.h  system_M251.c  system_M251.h  timer_reg.h  tk_reg.h  uart_reg.h  ui2c_reg.h  usbd.c  usbd.h  usbd_reg.h  uspi_reg.h  uuart_reg.h  wdt_reg.h  wwdt_reg.h
hal/pc/: board.c  board_hw.h  flash_4mbit.c  flash_4mbit.h  gpio.c  gpio_hw.h  gpio_sim.c  gpio_sim.h  hardware.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallel_bus.c  pc_options.cmake  pc_sources.cmake  programmerthread.cpp  programmerthread.h  setup_usb_simulation.sh  spi.c  spi_private.h  usbcdc.c  usbcdc_hw.h  usbsimulationmanager.cpp  usbsimulationmanager.h
tests/: simm_electrical_test.c  simm_electrical_test.h
usb_serial/: usb_serial.c  usb_serial.h
